fix bug in fonts

--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -22,7 +22,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Quicksand-Regular-MT"; }
+  font-family: "Quicksand-Regular"; }
 
 .site-container {
   width: 1115px;
